unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template__mdt/EventApi__Lightning_Event_Page_Template__mdt.object-meta.xml
<CustomObject>
    <description>Templates for Lightning Event Pages.</description>
    <label>Lightning Event Page Template</label>
    <pluralLabel>Lightning Event Page Templates</pluralLabel>
</CustomObject>