unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template__mdt/fields/EventApi__Event_Status_Template__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Status_Template__c</fullName>
    <description>** REQUIRED ** Linked to the related Event Status Template MDT.</description>
    <inlineHelpText>** REQUIRED ** Linked to the related Event Status Template MDT.</inlineHelpText>
    <label>Event Status Template</label>
    <referenceTo>EventApi__Event_Status_Template__mdt</referenceTo>
    <relationshipLabel>Lightning Event Page Templates</relationshipLabel>
    <relationshipName>Lightning_Event_Page_Templates</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>