unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template__mdt/fields/EventApi__Navigation_Label__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Navigation_Label__c</fullName>
    <description>** REQUIRED ** The label used for each page in the event&#39;s navigation.</description>
    <inlineHelpText>** REQUIRED ** The label used for each page in the event&#39;s navigation.</inlineHelpText>
    <label>Navigation Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>