unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template__mdt/fields/EventApi__Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Order__c</fullName>
    <description>** REQUIRED ** Page display order for the related event.</description>
    <inlineHelpText>** REQUIRED ** Page display order for the related event.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>