unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template__mdt/fields/EventApi__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Page_Name__c</fullName>
    <description>** REQUIRED ** The page&#39;s heading will change based on the value of this field.</description>
    <inlineHelpText>** REQUIRED ** The page&#39;s heading will change based on the value of this field.</inlineHelpText>
    <label>Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>